--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "http-status": "^1.5.0",
+    "kafkajs": "^1.16.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
   },
